build/log/idf_py_stdout_output_73162
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/mateus/dev/projects/ENDAP/build/bootloader/esp-idf/esptool_py && /home/mateus/.espressif/python_env/idf5.1_py3.12_env/bin/python /home/mateus/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mateus/dev/projects/ENDAP/build/bootloader/bootloader.bin
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/9] Building C object esp-idf/control_loop/CMakeFiles/__idf_control_loop.dir/control_loop.c.obj
FAILED: esp-idf/control_loop/CMakeFiles/__idf_control_loop.dir/control_loop.c.obj 
/home/mateus/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mateus/dev/projects/ENDAP/build/config -I/home/mateus/dev/projects/ENDAP/components/kernel/control_loop/include -I/home/mateus/esp/esp-idf/components/newlib/platform_include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mateus/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/include -I/home/mateus/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc -I/home/mateus/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mateus/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/mateus/esp/esp-idf/components/heap/include -I/home/mateus/esp/esp-idf/components/log/include -I/home/mateus/esp/esp-idf/components/soc/include -I/home/mateus/esp/esp-idf/components/soc/esp32 -I/home/mateus/esp/esp-idf/components/soc/esp32/include -I/home/mateus/esp/esp-idf/components/hal/esp32/include -I/home/mateus/esp/esp-idf/components/hal/include -I/home/mateus/esp/esp-idf/components/hal/platform_port/include -I/home/mateus/esp/esp-idf/components/esp_rom/include -I/home/mateus/esp/esp-idf/components/esp_rom/include/esp32 -I/home/mateus/esp/esp-idf/components/esp_rom/esp32 -I/home/mateus/esp/esp-idf/components/esp_common/include -I/home/mateus/esp/esp-idf/components/esp_system/include -I/home/mateus/esp/esp-idf/components/esp_system/port/soc -I/home/mateus/esp/esp-idf/components/esp_system/port/include/private -I/home/mateus/esp/esp-idf/components/xtensa/include -I/home/mateus/esp/esp-idf/components/xtensa/esp32/include -I/home/mateus/esp/esp-idf/components/esp_timer/include -I/home/mateus/esp/esp-idf/components/lwip/include -I/home/mateus/esp/esp-idf/components/lwip/include/apps -I/home/mateus/esp/esp-idf/components/lwip/include/apps/sntp -I/home/mateus/esp/esp-idf/components/lwip/lwip/src/include -I/home/mateus/esp/esp-idf/components/lwip/port/include -I/home/mateus/esp/esp-idf/components/lwip/port/freertos/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/mateus/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mateus/dev/projects/ENDAP/components/kernel/scheduler/include -I/home/mateus/dev/projects/ENDAP/components/kernel/watchdog/include -I/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe -I/home/mateus/dev/projects/ENDAP/components/observability/determinism_probe/include -I/home/mateus/esp/esp-idf/components/driver/include -I/home/mateus/esp/esp-idf/components/driver/deprecated -I/home/mateus/esp/esp-idf/components/driver/analog_comparator/include -I/home/mateus/esp/esp-idf/components/driver/dac/include -I/home/mateus/esp/esp-idf/components/driver/gpio/include -I/home/mateus/esp/esp-idf/components/driver/gptimer/include -I/home/mateus/esp/esp-idf/components/driver/i2c/include -I/home/mateus/esp/esp-idf/components/driver/i2s/include -I/home/mateus/esp/esp-idf/components/driver/ledc/include -I/home/mateus/esp/esp-idf/components/driver/mcpwm/include -I/home/mateus/esp/esp-idf/components/driver/parlio/include -I/home/mateus/esp/esp-idf/components/driver/pcnt/include -I/home/mateus/esp/esp-idf/components/driver/rmt/include -I/home/mateus/esp/esp-idf/components/driver/sdio_slave/include -I/home/mateus/esp/esp-idf/components/driver/sdmmc/include -I/home/mateus/esp/esp-idf/components/driver/sigma_delta/include -I/home/mateus/esp/esp-idf/components/driver/spi/include -I/home/mateus/esp/esp-idf/components/driver/temperature_sensor/include -I/home/mateus/esp/esp-idf/components/driver/touch_sensor/include -I/home/mateus/esp/esp-idf/components/driver/twai/include -I/home/mateus/esp/esp-idf/components/driver/uart/include -I/home/mateus/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/mateus/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/mateus/esp/esp-idf/components/esp_pm/include -I/home/mateus/esp/esp-idf/components/esp_ringbuf/include -I/home/mateus/dev/projects/ENDAP/components/observability/kernel_trace/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/mateus/dev/projects/ENDAP=. -fmacro-prefix-map=/home/mateus/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/control_loop/CMakeFiles/__idf_control_loop.dir/control_loop.c.obj -MF esp-idf/control_loop/CMakeFiles/__idf_control_loop.dir/control_loop.c.obj.d -o esp-idf/control_loop/CMakeFiles/__idf_control_loop.dir/control_loop.c.obj -c /home/mateus/dev/projects/ENDAP/components/kernel/control_loop/control_loop.c
/home/mateus/dev/projects/ENDAP/components/kernel/control_loop/control_loop.c: In function 'control_task':
/home/mateus/dev/projects/ENDAP/components/kernel/control_loop/control_loop.c:63:16: error: 'delta' undeclared (first use in this function)
   63 |             if(delta > LOOP_WARN_US)
      |                ^~~~~
/home/mateus/dev/projects/ENDAP/components/kernel/control_loop/control_loop.c:63:16: note: each undeclared identifier is reported only once for each function it appears in
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
